--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "openai": "^3.1.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-particle-backgrounds": "^1.0.4",
     "react-scripts": "5.0.1",
